homepage's overflow issue solved

--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@ body {
   overflow-x: hidden;
   display: flex;
   min-width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
   background-color: var(--bg);
   color: var(--themeColor2);
